--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ body * { /*Significa que irá ser aplicado para todos os seletores dentro do bod
   width: 360px; /* largura */
   /* height: 712px;altura */
   border : 1px solid red; /* bordar: tamanho da borda, estilo e  cor da borda */
-  margin: auto;/* margem centralizada automaticamente, ao lado e nos lados */
-  
+  padding: 0 24px;
+
   
  /* margin-top: 56px; distancia de cima, dando um espaço de 56px entre a caixa e o navegador */
   margin: 56px auto 0px auto;
@@ -79,4 +79,14 @@ ul li a{
   border-radius:8px ;/*  tipo de borda */
 
   -webkit-backdrop-filter: blur (4px);
+  text-decoration: none; /*Retirar a linha que está debaixo do texto*/
+  font-weight:bold; /* Negrito */
+
+  transition: background .4s;
+}
+
+/* pseudo selector */
+ul li a:hover{
+  background: rgba(255,255,255,0.5);
+  border: 1.5px solid white;
 }
