--- a/style.css
+++ b/style.css
@@ -91,10 +91,25 @@ ul li a:hover{
   background: rgba(255,255,255,0.5);
   border: 1.5px solid white;
 }
+
 #social-links{
   display: flex;
-  gap: 32px;
+  
   padding: 24px 0;
   justify-content: center;
   font-size: 24px;
+}
+
+#social-links a{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 16px;
+
+  transition: background .2s;border-radius: 50%;
+}
+
+#social-links a:hover{
+  background: rgba(255, 255, 255, 0.5);
+  
 }
