--- a/style.css
+++ b/style.css
@@ -3,6 +3,14 @@
   padding: 0; /*preenchimento interno */
   box-sizing: border-box; /*medido atraves da borda */
 }
+:root{
+  --text-color: white;
+
+}
+
+.light{
+  --text-color: black
+}
 
 body{
   /* imagem para colocar como 'papel' */
@@ -19,13 +27,13 @@ body{
 
 body * { /*Significa que irá ser aplicado para todos os seletores dentro do body */
   font-family: 'Inter', sans-serif;
-  color: #ffff
+  color: var(--text-color)
 }
 
 #container{
   width: 360px; /* largura */
   /* height: 712px;altura */
-  border : 1px solid red; /* bordar: tamanho da borda, estilo e  cor da borda */
+  /* border : 1px solid red; bordar: tamanho da borda, estilo e  cor da borda */
   padding: 0 24px;
 
   
@@ -89,7 +97,7 @@ ul li a{
 /* pseudo selector */
 ul li a:hover{
   background: rgba(255,255,255,0.5);
-  border: 1.5px solid white;
+  border: 1.5px solid var(--text-color);
 }
 
 #social-links{
@@ -110,6 +118,14 @@ ul li a:hover{
 }
 
 #social-links a:hover{
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.2);
   
 }
+
+footer{
+  padding: 24px 0px;
+  text-align: center;
+  font-size: 14px;
+  
+}
+
