--- a/style.css
+++ b/style.css
@@ -5,11 +5,21 @@
 }
 :root{
   --text-color: white;
+  --bg-url: url(./assets/bg-mobile.jpg);
+  --stroke-color: rgba(255,255,255,0.5) ;
+  --surface-color: rgba(255,255,255,0.05);
+  --surface-color-hover:rgba(0,0,0,0.02);
+  --highlight-color: rgba(255, 255, 255, 0.2);
 
 }
 
 .light{
-  --text-color: black
+  --text-color: black;
+  --bg-url: url(./assets/bg-mobile-light.jpg);
+  --stroke-color: rgba(0,0,0,0.5) ;
+  --surface-color: rgba(0,0,0,0.05);
+  --surface-color-hover:rgba(0,0,0,0.02);
+  --highlight-color: rgba(0,0,0,0.1);
 }
 
 body{
@@ -22,7 +32,7 @@ body{
   ampliar a imagem de acordo com o tamanho de tela.
   background-size:cover ; */ 
   
-  background: url(./assets/Mobile\ -\ 1080x1920.jpg) no-repeat top center/cover ;
+  background: var(--bg-url) no-repeat top center/cover ;
 }
 
 body * { /*Significa que irá ser aplicado para todos os seletores dentro do body */
@@ -83,8 +93,8 @@ ul li a{
 
   padding: 16px 24px;
 
-  background: rgba(255,255,255,0.1);
-  border: 1px solid rgba(255,255,255,0.5);
+  background: var(--surface-color);
+  border: 1px solid var(--stroke-color) ;
   border-radius:8px ;/*  tipo de borda */
 
   -webkit-backdrop-filter: blur (4px);
@@ -96,7 +106,7 @@ ul li a{
 
 /* pseudo selector */
 ul li a:hover{
-  background: rgba(255,255,255,0.5);
+  background: var(--surface-color-hover);
   border: 1.5px solid var(--text-color);
 }
 
@@ -118,7 +128,7 @@ ul li a:hover{
 }
 
 #social-links a:hover{
-  background: rgba(255, 255, 255, 0.2);
+  background: var(--highlight-color);
   
 }
 
