--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body{
   background-size:cover ; */ 
   
   background: var(--bg-url) no-repeat top center/cover ;
+  height: 100vh;
 }
 
 body * { /*Significa que irá ser aplicado para todos os seletores dentro do body */
@@ -181,3 +182,12 @@ footer{
   
 }
 
+/* media queries */
+@media (min-width:700px){
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+  .light{
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
